--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.95.2",
     "commander": "^12.1.0",
     "zod": "^3.23.8"
   }
